--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
-    "@react-three/drei": "^9.108.3",
+    "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.2.14",
     "maath": "^0.10.8",
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
